--- a/config/database.travis.yml
+++ b/config/database.travis.yml
@@ -1,6 +1,8 @@
 language: ruby
 cache: bundler
-dist: trusty
+before_install:
+  - yes | gem update --system --force
+  - gem install bundler
 rvm:
   - 2.5.1
 services:
