--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: ruby
 cache: bundler
+before_install:
+  - yes | gem update --system --force
+  - gem install bundler
 rvm:
   - 2.5.0
 services:
