specify bundler version in travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 cache: bundler
 before_install:
   - yes | gem update --system --force
-  - gem install bundler
+  - gem install bundler:1.16.3
 rvm:
   - 2.5.0
 services:
